test/syntax/valid/09_semicolon_at_end.sg
// Optional trailing semicolon on a line — equivalent to a newline.
import io

io.print("with semicolon");
io.print("without semicolon")
