test/syntax/errors/04_single_trailing_comma.sg
// expect-error: unexpected ',': expected a statement, ';', or newline after ','
// Even a single-call line must not end with a comma.
import io

io.print("alone"),
